# namespace-manager-tui

./: .gitignore  Cargo.toml  install.sh  output_file.patch
.github/workflows/: release.yml
src/: app.rs  main.rs  models.rs  scanner.rs  ui.rs
src/app/: navigation.rs  scroll.rs
src/scanner/: discovery.rs  error.rs  exec.rs  host.rs  inspector.rs  security.rs  structs.rs  utilities.rs
src/ui/: helpers.rs  namespace_details_view.rs  namespaces_list_view.rs
src/ui/namespace_details_view/: details_tabs_widget.rs  header_widget.rs  processes_widget.rs
src/ui/namespace_details_view/details_tabs_widget/: internals_tab.rs  network_tab.rs
src/ui/namespace_details_view/details_tabs_widget/internals_tab/: empty_state.rs  env_vars_widget.rs
src/ui/namespace_details_view/details_tabs_widget/network_tab/: interfaces_widget.rs  listening_ports_widget.rs  nftables_widget.rs  routing_table_widget.rs  subnet_peers_widget.rs
