[package]
name = "namespace-manager-tui"
version = "0.1.0"
edition = "2024"
authors = ["Josh"]
description = "A Rust terminal dashboard (TUI) for Linux network namespace management and system observability. "
repository = "https://github.com/last1chosen/namespace-manager-tui"
license = "MIT"
keywords = ["cli", "netns", "system-administration", "rust terminal"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"

[[bin]]
name = "nsm"
path = "src/main.rs"

[dependencies]
crossterm = "0.29.0"
once_cell = "1.21.3"
ratatui = "0.29.0"
rstest = "0.26.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"


